[package]
name = "custom-icons-with-markers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
mapboxgl = { path = "../../" }
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
web-sys = { version = "0.3", features = ["console"] }
geojson = "0.24"