[package]
name = "set-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
mapboxgl = { path = "../../" }
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
geojson = "0.24"
anyhow = "1"
web-sys = { version = "0.3", features = ["console", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
serde_json = "1"
gloo = { version = "0.8", features = ["futures"] }
enclose = "1"
futures = "0.3"
